# ROSE

./: .gitattributes  AUTHORS  BUGS  INSTALL  LICENSE  Makefile  README  README.md  get.ASL  mksolverlist  mkversion  newsolver.cxx  newsolver.h  nl2ros.cxx  parameters.h  problem.cxx  problem.h  rose.cxx  rose.h  solver.cxx  solver.h  solver_RQuarticConvex.cxx  solver_RQuarticConvex.h  solver_Rcdd.cxx  solver_Rcdd.h  solver_Rconvexifier.cxx  solver_Rconvexifier.h  solver_Rconvexifiermod.cxx  solver_Rconvexifiermod.h  solver_Rcopy.cxx  solver_Rcopy.h  solver_Rdisaggr.cxx  solver_Rdisaggr.h  solver_Rfbbtfp.cxx  solver_Rfbbtfp.h  solver_Rmilp2gph.cxx  solver_Rmilp2gph.h  solver_Roa.cxx  solver_Roa.h  solver_Rporta.cxx  (+43 more)
.coin-or/: projDesc.xml
Ev3/: DISTFILES  FEATURES  FILES  HISTORY  Makefile  PORTING  README  auxiliary.h  common.h  convexifiermain.cxx  exceptions.h  exprauxiliary.cxx  exprauxiliary.h  expression.cxx  expression.cxx.convexifier  expression.cxx.h  expression.cxx.orig  expression.h  exprexternal.cxx  fastexpression.cxx  fastexpression.h  main.cxx  makedist  operand.cxx  parser.cxx  parser.h  quarticmain.cxx  rcs.CHECKEDOUT  smithmain.cxx  tree.cxx  tree.h  tree_hi.cxx
Ev3/examples/: CMakeLists.txt  cas.cxx  examplemain.cxx  smithmain.cxx  smithmain2.cxx  testfasteval.cxx  testmain.cxx  testmemleak.cxx  try1.cxx  try2.cxx
Ev3/franco/: Makefile  README  bf.h  bf1.cxx  mbf.cxx
Ev3/msvc++/: Ev3.dep  Ev3.dsp  Ev3.dsw  makefile
Ev3/try/: automatic_alloc.cxx  destructor.cxx  (+4 more)
examples/: README  bilinear.ros  bilinear.sh  st_e40.mod  st_e40.run  st_e40.sh
